--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,10 +28,10 @@ jobs:
 
 
     - name: Build application
-      run: dotnet build SmartStock-AI/SmartStock-AI.csproj --configuration Release
+      run: dotnet build Smartstock/Smartstock.csproj --configuration Release
 
     - name: Publish application
-      run: dotnet publish SmartStock-AI/SmartStock-AI.csproj --configuration Release --output ./published
+      run: dotnet publish Smartstock/Smartstock.csproj --configuration Release --output ./published
 
 
     - name: Deploy to server (ejemplo de despliegue)
