--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,4 +36,4 @@ jobs:
 
     - name: Deploy to server (ejemplo de despliegue)
       run: |
-        scp -r ./published username@server:/path/to/deploy
+        scp -r ./published carlosflores30@192.168.1.20:/var/www/smartstock
